fix numerous menu scroll issues; fix search icon placement & look; fix header padding; fix collapse conflict; fix side-menu placement

--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -16,7 +16,7 @@
   margin-left: -150px;
   width: 150px;
   position: fixed;
-  padding-top: 70px;
+  padding-top: 82px;
   top: 0;
   left: 150px;
   bottom: 0;
@@ -110,14 +110,6 @@
 }
 .menu-link:focus span:after, .menu-link:hover span:after {
   margin-top: .6em
-}
-
-ul.nav.nav-list > li > a {
-	margin-left: -30px;
-}
-
-.currentbranch0 a {
-	margin-left: -30px;
 }
 
 .multilevel-linkul-0 {
